checkin everything for ignasi