@@ -27,7 +27,7 @@ def commonSettings: Seq[Setting[_]] = Seq(
 // PARS (project root)
 // ---------------------------------------------------------------------------------------------------------------------
 
-lazy val root = (project in file("."))
+lazy val `lagom-pac4j-scala` = (project in file("."))
   .settings(commonSettings: _*)
   .aggregate(security,
     `user-api`,`user-service`,
@@ -68,22 +68,19 @@ lazy val common = (project in file("common"))
 
 lazy val `web-gateway` = (project in file("web-gateway"))
   .settings(commonSettings: _*)
-  .enablePlugins(PlayScala && LagomPlay) //, SbtReactiveAppPlugin)
+  .enablePlugins(PlayScala && LagomPlay, SbtReactiveAppPlugin)
   .dependsOn(`user-api`)
   .settings(
     libraryDependencies ++= Seq(
       lagomScaladslServer,
       ehcache,
+      cacheApi,
+      guice,
       Dependencies.macwire,
-      Dependencies.scalaTest,
-//      "org.ocpsoft.prettytime" % "prettytime" % "3.2.7.Final",
-//      "org.webjars" % "foundation" % "6.2.3",
-//      "org.webjars" % "foundation-icon-fonts" % "d596a3cfb3"
+      Dependencies.scalaTest
     )
       ++ Libraries.webjars
       ++ Libraries.auth
-
-//    httpIngressPaths := Seq("/")
   )
 
 //======================================================================================================================
@@ -116,15 +113,3 @@ lazy val `user-service` = (project in file("user-service"))
     )
   )
   .settings(lagomForkedTestSettings: _*)
-
-
-//-server -Xms8g -Xmx8g -XX:MaxMetaspaceSize=3200m  -XX:+UseParNewGC
-//-XX:+UseConcMarkSweepGC -XX:MaxGCPauseMillis=1000
-//-XX:+DisableExplicitGC -XX:+PrintGCDetails
-//-XX:-UseAdaptiveSizePolicy -XX:SurvivorRatio=7 -XX:NewSize=5004m
-//  -XX:MaxNewSize=5004m -XX:MaxTenuringThreshold=12
-//-XX:CMSInitiatingOccupancyFraction=75
-//-XX:+UseCMSInitiatingOccupancyOnly -XX:+PrintFlagsFinal
-//-XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution
-//-XX:+PrintGCCause -XX:+PrintAdaptiveSizePolicy
-//-XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=3 -XX:GCLogFileSize=200M
